fix: Allow copy with empty suffix (#1386)
* Fix #1377

* Fix: Allow empty suffix in admin copy

* Add submit-row class

* Fix; Cancel link too small if djangocms-admin-style is not present

--- a/filer/private/sass/components/_base.scss
+++ b/filer/private/sass/components/_base.scss
@@ -116,9 +116,10 @@ body {
     padding: 20px 0 0;
 }
 
-.delete-confirmation form .cancel-link {
+form .cancel-link {
     height: auto !important;
     line-height: inherit !important;
+    padding: 10px 15px;
 }
 
 .sr-only {
